<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/lets_explore"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="88dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:text="@string/recommendation"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cat_forest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/forest" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cat_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/cat_cottage"
        app:layout_constraintStart_toEndOf="@+id/cat_forest"
        app:layout_constraintTop_toTopOf="@+id/cat_forest">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/family"
            app:layout_constraintStart_toEndOf="@+id/wrap_content"
            app:layout_constraintTop_toTopOf="@+id/wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cat_cottage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cat_family">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/cottage"
            app:layout_constraintStart_toEndOf="@+id/cat_forest"
            app:layout_constraintTop_toTopOf="@+id/cat_forest" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cat_water"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/cat_forest"
        app:layout_constraintTop_toBottomOf="@+id/cat_forest">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/water"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cat_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/cat_water"
        app:layout_constraintTop_toTopOf="@+id/cat_water"
        app:layout_constraintEnd_toStartOf="@+id/cat_nature">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/restaurant"
            app:layout_constraintStart_toEndOf="@+id/wrap_content"
            app:layout_constraintTop_toTopOf="@+id/wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cat_nature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cat_cottage"
        app:layout_constraintTop_toTopOf="@+id/cat_food">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="25dp"
            android:src="@drawable/landscape"
            app:layout_constraintStart_toEndOf="@+id/cat_forest"
            app:layout_constraintTop_toTopOf="@+id/cat_forest" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="272dp" />

</androidx.constraintlayout.widget.ConstraintLayout>